--- a/main.html
+++ b/main.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html>
-    <head>
+<body>
 
-    </head>
+<h1>My First Heading</h1>
 
-    <body>
-        Welcome!
-    </body>
+<p>My first paragraph.</p>
+
+</body>
 </html>
