--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1>Industrious</h1>
-					<p>A responsive business oriented template with a video background<br />
+					<h1>Manusath Handa</h1>
+					<p>An Education Audio Library for the Visually Impaired<br />
 					designed by <a href="https://templated.co/">TEMPLATED</a> and released under the Creative Commons License.</p>
 				</div>
 				<video autoplay loop muted playsinline src="images/banner.mp4"></video>
