--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
 						<section>
 							<div class="content">
 								<blockquote>
-									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+									<p>The only thing worse than being blind is having sight but no vision.</p>
 								</blockquote>
 								<div class="author">
 									<div class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</div>
-									<p class="credit">- <strong>Jane Doe</strong> <span>CEO - ABC Inc.</span></p>
+									<p class="credit">- <strong>Helen Keller</strong> <span>CEO - ABC Inc.</span></p>
 								</div>
 							</div>
 						</section>
