--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
 						<section>
 							<div class="content">
 								<blockquote>
-									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+									<p>Blindness has not been for me a total misfortune; it should not be seen in a pathetic way. It should be seen as a way of life: one of the styles of living.</p>
 								</blockquote>
 								<div class="author">
 									<div class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</div>
-									<p class="credit">- <strong>John Doe</strong> <span>CEO - ABC Inc.</span></p>
+									<p class="credit">- <strong>Jorge Luis Borges</strong> <span>CEO - ABC Inc.</span></p>
 								</div>
 							</div>
 						</section>
