--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
 						<section>
 							<div class="content">
 								<blockquote>
-									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+									<p>“Disability need not be an obstacle to success.”</p>
 								</blockquote>
 								<div class="author">
 									<div class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</div>
-									<p class="credit">- <strong>Janet Smith</strong> <span>CEO - ABC Inc.</span></p>
+									<p class="credit">- <strong>Stephen Hawking</strong> <span>CEO - ABC Inc.</span></p>
 								</div>
 							</div>
 						</section>
