--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 									<div class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</div>
-									<p class="credit">- <strong>Helen Keller</strong> <span>CEO - ABC Inc.</span></p>
+									<p class="credit">- <strong>Helen Keller</strong> <span>American author</span></p>
 								</div>
 							</div>
 						</section>
@@ -119,7 +119,7 @@
 									<div class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</div>
-									<p class="credit">- <strong>Jorge Luis Borges</strong> <span>CEO - ABC Inc.</span></p>
+									<p class="credit">- <strong>Jorge Luis Borges</strong> <span>argentine writer</span></p>
 								</div>
 							</div>
 						</section>
@@ -132,7 +132,7 @@
 									<div class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</div>
-									<p class="credit">- <strong>Stephen Hawking</strong> <span>CEO - ABC Inc.</span></p>
+									<p class="credit">- <strong>Stephen Hawking</strong> <span>English theoretical physicist</span></p>
 								</div>
 							</div>
 						</section>
