--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						<section>
 							<div class="content">
 								<blockquote>
-									<p>The only thing worse than being blind is having sight but no vision.</p>
+									<p>"The only thing worse than being blind is having sight but no vision."</p>
 								</blockquote>
 								<div class="author">
 									<div class="image">
@@ -113,7 +113,7 @@
 						<section>
 							<div class="content">
 								<blockquote>
-									<p>Blindness has not been for me a total misfortune; it should not be seen in a pathetic way. It should be seen as a way of life: one of the styles of living.</p>
+									<p>"Blindness has not been for me a total misfortune; it should not be seen in a pathetic way. It should be seen as a way of life: one of the styles of living."</p>
 								</blockquote>
 								<div class="author">
 									<div class="image">
