--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 						<section>
 							<div class="content">
 								<blockquote>
-									<p>“Disability need not be an obstacle to success.”</p>
+									<p>"Disability need not be an obstacle to success."</p>
 								</blockquote>
 								<div class="author">
 									<div class="image">
