--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 		<!-- CTA -->
 			<section id="cta" class="wrapper">
 				<div class="inner">
-					<h2>Curabitur ullamcorper ultricies</h2>
-					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
+					<h2>‘Manusath Handa- Voice of Humanity'</h2>
+					<p>This project intends to provide massive support for the visually impaired studentsin SriLanka by offering them audiobooks that cover subject matter which they learn using the braille technique.</p>
 				</div>
 			</section>
 
