--- a/index.html
+++ b/index.html
@@ -51,28 +51,28 @@
 					<div class="highlights">
 						<!--Selectable categories-->
 						<section>
-							<div class="content">
+							<div class="content" style="cursor: pointer;" onclick="window.location='https://google.com';">
 								<header>
-									<a href="#" class="icon fa-qrcode"><span class="label">Icon</span></a>
+									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
 									<h3>Magazines</h3>
 								</header>
 								<p>Listen to an ever-growing collection of the most popular children's magazines</p>
 							</div>
 						</section>
 						<section>
-							<div class="content">
+							<div class="content" style="cursor: pointer;" onclick="window.location='https://google.com';">
 								<header>
-									<a href="#" class="icon fa-qrcode"><span class="label">Icon</span></a>
-									<h3>Past Papers</h3>
+									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
+									<h3>Magazines</h3>
 								</header>
 								<p>Listen to the past papers of G.C.E. Ordinary Level exam</p>
 							</div>
 						</section>
 						<section>
-							<div class="content">
+							<div class="content" style="cursor: pointer;" onclick="window.location='https://google.com';">
 								<header>
-									<a href="#" class="icon fa-qrcode"><span class="label">Icon</span></a>
-									<h3>Other reads</h3>
+									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
+									<h3>Magazines</h3>
 								</header>
 								<p>Listen to miscellaneous reading materials</p>
 							</div>
