--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 		<!-- CTA -->
 			<section id="cta" class="wrapper">
 				<div class="inner">
-					<h2>‘Manusath Handa- Voice of Humanity'</h2>
-					<p>This project intends to provide massive support for the visually impaired studentsin SriLanka by offering them audiobooks that 
-					cover subject matter which they learn using the braille technique.It has been discovered that audiobooks are far more effective,comfortable 
+					<h2>"Manusath Handa - Voice of Humanity"</h2>
+					<p>This project intends to provide massive support for the visually impaired students in Sri Lanka by offering them audiobooks that 
+					cover the subject matter which they learn using the Braille technique. It has been discovered that audiobooks are far more effective, comfortable 
 						and can cover the content in a commendable manner while helping the students to hear and learn beyond what they have imagined.</p>
 				</div>
 			</section>
