--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
 							<h4>Reach Us</h4>
 							<ul class="alt">
 								<li><a href="#">
-									Post
+									Post <br>
 
-									Rotaract Club of University of Moratuwa,
-									University of Moratuwa,
-									Bandaranayake Mawatha,
+									Rotaract Club of University of Moratuwa,<br>
+									University of Moratuwa,<br>
+									Bandaranayake Mawatha,<br>
 									Moratuwa. 10400</a></li>
 								<!--<li><a href="#">Etiam vel lorem sed amet.</a></li>
 								<li><a href="#">Felis enim feugiat viverra.</a></li>
