--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 							<h4>Reach Us</h4>
 							<ul class="alt">
 								<li><a href="#">
-									Post <br>
+									<strong>Post</strong> <br><br>
 
 									Rotaract Club of University of Moratuwa,<br>
 									University of Moratuwa,<br>
@@ -166,7 +166,7 @@
 							</ul>
 						</section>
 						<section>
-							<h4>Magna sed ipsum</h4>
+							<h4>Follow Us</h4>
 							<ul class="plain">
 								<li><a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
 								<li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
