--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
 		<!-- Testimonials -->
 			<section class="wrapper">
 				<div class="inner">
-					<header class="special">
+					<!--<header class="special">
 						<h2>Faucibus consequat lorem</h2>
 						<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
-					</header>
+					</header>-->
 					<div class="testimonials">
 						<section>
 							<div class="content">
