--- a/index.html
+++ b/index.html
@@ -51,27 +51,27 @@
 					<div class="highlights">
 						<!--Selectable categories-->
 						<section>
-							<div class="content">
+							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
 								<header>
-									<a href="#" class="icon fa-qrcode"><span class="label">Icon</span></a>
+									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
 									<h3>Magazines</h3>
 								</header>
 								<p>Listen to an ever-growing collection of the most popular children's magazines</p>
 							</div>
 						</section>
 						<section>
-							<div class="content">
+							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
 								<header>
-									<a href="#" class="icon fa-qrcode"><span class="label">Icon</span></a>
+									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
 									<h3>Past Papers</h3>
 								</header>
 								<p>Listen to the past papers of G.C.E. Ordinary Level exam</p>
 							</div>
 						</section>
 						<section>
-							<div class="content">
+							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
 								<header>
-									<a href="#" class="icon fa-qrcode"><span class="label">Icon</span></a>
+									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
 									<h3>Other reads</h3>
 								</header>
 								<p>Listen to miscellaneous reading materials</p>
@@ -148,7 +148,7 @@
 					<div class="content">
 						<section>
 							<h3>About RotaractMora</h3>
-							<p>RotaractMora has grown tremendously to a present member base of over 250 members.RotaractMora over the years has earned much recognition in the Rotaract movement,
+							<p>RotaractMora has grown tremendously to a present member base of over 250 members. RotaractMora over the years has earned much recognition in the Rotaract movement,
 							bagging multiple local, as well as international awards, and doing projects with high quality,
 							sustainability and continuity.</p>
 						</section>
