--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
 									<h3>Other reads</h3>
 								</header>
-								<p>Listen to miscellaneous reading materials</p>
+								<p>Listen to many miscellaneous reading materials</p>
 							</div>
 						</section>
 					</div>
