--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 									Rotaract Club of University of Moratuwa,<br>
 									University of Moratuwa,<br>
 									Bandaranayake Mawatha,<br>
-									Moratuwa. 10400</a></li>
+									Moratuwa. <br> 10400</a></li>
 								<!--<li><a href="#">Etiam vel lorem sed amet.</a></li>
 								<li><a href="#">Felis enim feugiat viverra.</a></li>
 								<li><a href="#">Dolor pulvinar magna etiam.</a></li>-->
