--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 				<div class="inner">
 					<div class="content">
 						<section>
-							<h3>About RotaractMora</h3>
+							<h4>About Us</h4>
 							<p>RotaractMora has grown tremendously to a present member base of over 250 members. RotaractMora over the years has earned much recognition in the Rotaract movement,
 							bagging multiple local, as well as international awards, and doing projects with high quality,
 							sustainability and continuity.</p>
