--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
 							<h4>Reach Us</h4>
 							<ul class="alt">
 								<li><a href="#">
-									<strong>Post</strong> <br><br>
-
+									<strong>Post</strong>
+									<br/>
 									Rotaract Club of University of Moratuwa,<br>
 									University of Moratuwa,<br>
 									Bandaranayake Mawatha,<br>
@@ -170,15 +170,16 @@
 						<section>
 							<h4>Follow Us</h4>
 							<ul class="plain">
-								<li><a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
-								<li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
-								<li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
-								<li><a href="#"><i class="icon fa-github">&nbsp;</i>Github</a></li>
+								<li><a href="https://twitter.com/RotaractMora"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
+								<li><a href="https://www.facebook.com/rotaractmora/"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
+								<li><a href="https://www.instagram.com/rotaractmora/"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
+								<li><a href="https://www.linkedin.com/company/rotaract-club-of-university-of-moratuwa/about/"><i class="icon fa-github">&nbsp;</i>LinkedIn</a></li>
 							</ul>
 						</section>
 					</div>
 					<div class="copyright">
-						&copy; Untitled. Photos <a href="https://unsplash.co">Unsplash</a>, Video <a href="https://coverr.co">Coverr</a>.
+						<!--&copy; RotaractMora. Photos <a href="https://unsplash.co">Unsplash</a>, Video <a href="https://coverr.co">Coverr</a>.-->
+						&copy; RotaractMora 2020
 					</div>
 				</div>
 			</footer>
