--- a/index.html
+++ b/index.html
@@ -155,13 +155,14 @@
 						<section>
 							<h4>Reach Us</h4>
 							<ul class="alt">
-								<li><a href="#">
+								<li>
 									<strong>Post</strong>
 									<br/>
 									Rotaract Club of University of Moratuwa,<br>
 									University of Moratuwa,<br>
 									Bandaranayake Mawatha,<br>
-									Moratuwa. <br> 10400</a></li>
+									Moratuwa. <br> 10400
+								</li>
 								<!--<li><a href="#">Etiam vel lorem sed amet.</a></li>
 								<li><a href="#">Felis enim feugiat viverra.</a></li>
 								<li><a href="#">Dolor pulvinar magna etiam.</a></li>-->
