--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							</div>
 						</section>
 						<section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
+							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers.html'">
 								<header>
 									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
 									<h3>Past Papers</h3>
