--- a/past_papers.html
+++ b/past_papers.html
@@ -6,15 +6,21 @@
 -->
 <html>
 	<head>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+		  
 		<title>Past Papers</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+
+		
+
 	</head>
 	<body class="is-preload">
-
 		<!-- Header -->
 			<header id="header">
 				<a class="logo" href="index.html">Manusath Handa</a>
@@ -38,21 +44,81 @@
 			</div>
 
 		<!-- Main -->
-			<section id="main" class="wrapper">
-				<div class="inner">
-					<div class="content">
-						<header>
-							<h2>Feugiat consequat</h2>
-						</header>
-						<p>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Magna et cursus lorem faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod tempus. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida lorem ipsum dolor sit amet dolor feugiat consequat. </p>
-						<p>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Magna et cursus lorem faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod tempus. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida lorem ipsum dolor sit amet dolor feugiat consequat. </p>
-						<hr />
-						<h3>Magna odio tempus commodo</h3>
-						<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor. Ante commodo blandit adipiscing integer semper orci eget. Faucibus commodo adipiscing mi eu nullam accumsan morbi arcu ornare odio mi adipiscing nascetur lacus ac interdum morbi accumsan vis mi accumsan ac praesent.</p>
-						<p>Felis sagittis eget tempus primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Magna sed etiam ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus lorem ipsum dolor sit amet nullam.</p>
-					</div>
+		<div class="container">
+			<br/>
+			<h2>Select an Agriculture audiobook to listen to,</h2>
+			<p>Click on the expandable items to listen to & download audio questions of past papers.</p>
+
+
+			<div class="panel-group" id="accordion">
+			  <div class="panel panel-default">
+				<div class="panel-heading">
+				  <h4 class="panel-title">
+					<a data-toggle="collapse" data-parent="#accordion" href="#collapse1">2019</a>
+				  </h4>
 				</div>
-			</section>
+				<div id="collapse1" class="panel-collapse collapse in">
+				  <div class="panel-body">Question 1
+					<audio controls>
+						<source src="./assets/sound_test.mp3" type="audio/mp3" Q1>
+					  Your browser does not support the audio element.
+					</audio>"
+				  </div>
+				  <div class="panel-body">Question 2
+					<audio controls>
+						<source src="./assets/sound_test.mp3" type="audio/mp3" Q1>
+					  Your browser does not support the audio element.
+					</audio>"
+				  </div>
+				</div>
+			  </div>
+
+
+			  <div class="panel panel-default">
+				<div class="panel-heading">
+				  <h4 class="panel-title">
+					<a data-toggle="collapse" data-parent="#accordion" href="#collapse2">2018</a>
+				  </h4>
+				</div>
+				<div id="collapse2" class="panel-collapse collapse">
+				  <div class="panel-body">
+					<div id="collapse1" class="panel-collapse collapse in">
+						<div class="panel-body">Question 1
+						  <audio controls>
+							  <source src="./assets/sound_test.mp3" type="audio/mp3" Q1>
+							Your browser does not support the audio element.
+						  </audio>"
+						</div>
+						<div class="panel-body">Question 2
+						  <audio controls>
+							  <source src="./assets/sound_test.mp3" type="audio/mp3" Q1>
+							Your browser does not support the audio element.
+						  </audio>"
+						</div>
+						<div class="panel-body">Question 3
+							<audio controls>
+								<source src="./assets/sound_test.mp3" type="audio/mp3" Q1>
+							  Your browser does not support the audio element.
+							</audio>"
+						  </div>
+					  </div>
+				  </div>
+				</div>
+			  </div>
+			  <div class="panel panel-default">
+				<div class="panel-heading">
+				  <h4 class="panel-title">
+					<a data-toggle="collapse" data-parent="#accordion" href="#collapse3">2017</a>
+				  </h4>
+				</div>
+				<div id="collapse3" class="panel-collapse collapse">
+				  <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+				  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+				</div>
+			  </div>
+			</div> 
+		  </div>
 
 		<!-- Footer -->
 		<footer id="footer">
