--- a/past_papers_agri.html
+++ b/past_papers_agri.html
@@ -62,13 +62,13 @@
 					<audio controls>
 						<source src="./assets/sound_test.mp3" type="audio/mp3" Q1>
 					  Your browser does not support the audio element.
-					</audio>"
+					</audio>
 				  </div>
 				  <div class="panel-body">Question 2
 					<audio controls>
 						<source src="./assets/sound_test.mp3" type="audio/mp3" Q1>
 					  Your browser does not support the audio element.
-					</audio>"
+					</audio>
 				  </div>
 				</div>
 			  </div>
@@ -87,19 +87,19 @@
 						  <audio controls>
 							  <source src="./assets/sound_test.mp3" type="audio/mp3" Q1>
 							Your browser does not support the audio element.
-						  </audio>"
+						  </audio>
 						</div>
 						<div class="panel-body">Question 2
 						  <audio controls>
 							  <source src="./assets/sound_test.mp3" type="audio/mp3" Q1>
 							Your browser does not support the audio element.
-						  </audio>"
+						  </audio>
 						</div>
 						<div class="panel-body">Question 3
 							<audio controls>
 								<source src="./assets/sound_test.mp3" type="audio/mp3" Q1>
 							  Your browser does not support the audio element.
-							</audio>"
+							</audio>
 						  </div>
 					  </div>
 				  </div>
