--- a/past_papers_agri.html
+++ b/past_papers_agri.html
@@ -58,17 +58,25 @@
 				  </h4>
 				</div>
 				<div id="collapse1" class="panel-collapse collapse in">
-				  <div class="panel-body">Question 1
+				  <div class="panel-body">Question 1					
 					<audio controls>
-						<source src="./assets/sound_test.mp3" type="audio/mp3" Q1>
+						<source src="./assets/sound_test.mp3" type="audio/mp3" Q1>							
 					  Your browser does not support the audio element.
 					</audio>
+					<a href="./assets/sound_test.mp3" download>
+						<img src="./images/icons8-download-32.png">
+					</a>
 				  </div>
 				  <div class="panel-body">Question 2
 					<audio controls>
 						<source src="./assets/sound_test.mp3" type="audio/mp3" Q1>
 					  Your browser does not support the audio element.
 					</audio>
+					<a href="./assets/sound_test.mp3" download>
+						<img src="./images/icons8-download-32.png">
+					</a>
+
+					
 				  </div>
 				</div>
 			  </div>
@@ -88,18 +96,27 @@
 							  <source src="./assets/sound_test.mp3" type="audio/mp3" Q1>
 							Your browser does not support the audio element.
 						  </audio>
+						  <a href="./assets/sound_test.mp3" download>
+							<img src="./images/icons8-download-32.png">
+						</a>
 						</div>
 						<div class="panel-body">Question 2
 						  <audio controls>
 							  <source src="./assets/sound_test.mp3" type="audio/mp3" Q1>
 							Your browser does not support the audio element.
 						  </audio>
+						  <a href="./assets/sound_test.mp3" download>
+							<img src="./images/icons8-download-32.png">
+						</a>
 						</div>
 						<div class="panel-body">Question 3
 							<audio controls>
 								<source src="./assets/sound_test.mp3" type="audio/mp3" Q1>
 							  Your browser does not support the audio element.
 							</audio>
+							<a href="./assets/sound_test.mp3" download>
+								<img src="./images/icons8-download-32.png">
+							</a>
 						  </div>
 					  </div>
 				  </div>
