--- a/past_papers_agri.html
+++ b/past_papers_agri.html
@@ -5,187 +5,229 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
-	<head>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-		  
-		<title>Past Papers</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<link rel="stylesheet" href="assets/css/main.css" />
 
-		
+<head>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-	</head>
-	<body class="is-preload">
-		<!-- Header -->
-			<header id="header">
-				<a class="logo" href="index.html">Manusath Handa</a>
-				<nav>
-					<a href="#menu">Menu</a>
-				</nav>
-			</header>
+	<title>Past Papers</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="description" content="" />
+	<meta name="keywords" content="" />
+	<link rel="stylesheet" href="assets/css/main.css" />
 
-		<!-- Nav -->
-			<nav id="menu">
-				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="elements.html">Elements</a></li>
-					<li><a href="generic.html">Generic</a></li>
-				</ul>
-			</nav>
 
-		<!-- Heading -->
-			<div id="heading" >
-				<h2>Past Papers of G.C.E. O/L Examination</h2>
+
+</head>
+
+<body class="is-preload">
+	<!-- Header -->
+	<header id="header">
+		<a class="logo" href="index.html">Manusath Handa</a>
+		<nav>
+			<a href="#menu">Menu</a>
+		</nav>
+	</header>
+
+	<!-- Nav -->
+	<nav id="menu">
+		<ul class="links">
+			<li><a href="index.html">Home</a></li>
+			<li><a href="elements.html">Elements</a></li>
+			<li><a href="generic.html">Generic</a></li>
+		</ul>
+	</nav>
+
+	<!-- Heading -->
+	<div id="heading">
+		<h2>Past Papers of G.C.E. O/L Examination</h2>
+	</div>
+
+	<!-- Main -->
+	<div class="container">
+		<br />
+		<h2>Select an Agriculture audiobook to listen to,</h2>
+		<p>Click on the expandable items to listen to & download audio questions of past papers.</p>
+
+		<div class="panel-group" id="accordion">
+
+
+			<div class="panel panel-default">
+
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" data-parent="#accordion" href="#collapse1">2019</a>
+					</h4>
+				</div>
+
+				<div id="collapse1" class="panel-collapse collapse in">
+					<div class="panel-body">Question 1
+						<audio controls>
+							<source src="./assets/sound_test.mp3" type="audio/mp3">
+							Your browser does not support the audio element.
+						</audio>
+						<a href="./assets/sound_test.mp3" download>
+							<img src="./images/icons8-download-32.png">
+						</a>
+					</div>
+					<div class="panel-body">Question 2
+						<audio controls>
+							<source src="./assets/sound_test.mp3" type="audio/mp3">
+							Your browser does not support the audio element.
+						</audio>
+						<a href="./assets/sound_test.mp3" download>
+							<img src="./images/icons8-download-32.png">
+						</a>
+					</div>
+					<div class="panel-body">Question 3
+						<audio controls>
+							<source src="./assets/sound_test.mp3" type="audio/mp3">
+							Your browser does not support the audio element.
+						</audio>
+						<a href="./assets/sound_test.mp3" download>
+							<img src="./images/icons8-download-32.png">
+						</a>
+					</div>
+				</div>
+
+				<br/>
+
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" data-parent="#accordion" href="#collapse2">2018</a>
+					</h4>
+				</div>
+
+				<div id="collapse2" class="panel-collapse collapse in">
+					<div class="panel-body">Question 1
+						<audio controls>
+							<source src="./assets/sound_test.mp3" type="audio/mp3">
+							Your browser does not support the audio element.
+						</audio>
+						<a href="./assets/sound_test.mp3" download>
+							<img src="./images/icons8-download-32.png">
+						</a>
+					</div>
+					<div class="panel-body">Question 2
+						<audio controls>
+							<source src="./assets/sound_test.mp3" type="audio/mp3">
+							Your browser does not support the audio element.
+						</audio>
+						<a href="./assets/sound_test.mp3" download>
+							<img src="./images/icons8-download-32.png">
+						</a>
+					</div>
+					<div class="panel-body">Question 3
+						<audio controls>
+							<source src="./assets/sound_test.mp3" type="audio/mp3">
+							Your browser does not support the audio element.
+						</audio>
+						<a href="./assets/sound_test.mp3" download>
+							<img src="./images/icons8-download-32.png">
+						</a>
+					</div>
+					<div class="panel-body">Question 4
+						<audio controls>
+							<source src="./assets/sound_test.mp3" type="audio/mp3">
+							Your browser does not support the audio element.
+						</audio>
+						<a href="./assets/sound_test.mp3" download>
+							<img src="./images/icons8-download-32.png">
+						</a>
+					</div>
+				</div>
+				<br/>
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" data-parent="#accordion" href="#collapse3">2017</a>
+					</h4>
+				</div>
+
+				<div id="collapse3" class="panel-collapse collapse in">
+					<div class="panel-body">Question 1
+						<audio controls>
+							<source src="./assets/sound_test.mp3" type="audio/mp3">
+							Your browser does not support the audio element.
+						</audio>
+						<a href="./assets/sound_test.mp3" download>
+							<img src="./images/icons8-download-32.png">
+						</a>
+					</div>
+					<div class="panel-body">Question 2
+						<audio controls>
+							<source src="./assets/sound_test.mp3" type="audio/mp3">
+							Your browser does not support the audio element.
+						</audio>
+						<a href="./assets/sound_test.mp3" download>
+							<img src="./images/icons8-download-32.png">
+						</a>
+					</div>
+				</div>
+
 			</div>
 
-		<!-- Main -->
-		<div class="container">
-			<br/>
-			<h2>Select an Agriculture audiobook to listen to,</h2>
-			<p>Click on the expandable items to listen to & download audio questions of past papers.</p>
 
+		</div>
 
-			<div class="panel-group" id="accordion">
-			  <div class="panel panel-default">
-				<div class="panel-heading">
-				  <h4 class="panel-title">
-					<a data-toggle="collapse" data-parent="#accordion" href="#collapse1">2019</a>
-				  </h4>
-				</div>
-				<div id="collapse1" class="panel-collapse collapse in">
-				  <div class="panel-body">Question 1					
-					<audio controls>
-						<source src="./assets/sound_test.mp3" type="audio/mp3" Q1>							
-					  Your browser does not support the audio element.
-					</audio>
-					<a href="./assets/sound_test.mp3" download>
-						<img src="./images/icons8-download-32.png">
-					</a>
-				  </div>
-				  <div class="panel-body">Question 2
-					<audio controls>
-						<source src="./assets/sound_test.mp3" type="audio/mp3" Q1>
-					  Your browser does not support the audio element.
-					</audio>
-					<a href="./assets/sound_test.mp3" download>
-						<img src="./images/icons8-download-32.png">
-					</a>
+	</div>
 
-					
-				  </div>
-				</div>
-			  </div>
-
-
-			  <div class="panel panel-default">
-				<div class="panel-heading">
-				  <h4 class="panel-title">
-					<a data-toggle="collapse" data-parent="#accordion" href="#collapse2">2018</a>
-				  </h4>
-				</div>
-				<div id="collapse2" class="panel-collapse collapse">
-				  <div class="panel-body">
-					<div id="collapse1" class="panel-collapse collapse in">
-						<div class="panel-body">Question 1
-						  <audio controls>
-							  <source src="./assets/sound_test.mp3" type="audio/mp3" Q1>
-							Your browser does not support the audio element.
-						  </audio>
-						  <a href="./assets/sound_test.mp3" download>
-							<img src="./images/icons8-download-32.png">
-						</a>
-						</div>
-						<div class="panel-body">Question 2
-						  <audio controls>
-							  <source src="./assets/sound_test.mp3" type="audio/mp3" Q1>
-							Your browser does not support the audio element.
-						  </audio>
-						  <a href="./assets/sound_test.mp3" download>
-							<img src="./images/icons8-download-32.png">
-						</a>
-						</div>
-						<div class="panel-body">Question 3
-							<audio controls>
-								<source src="./assets/sound_test.mp3" type="audio/mp3" Q1>
-							  Your browser does not support the audio element.
-							</audio>
-							<a href="./assets/sound_test.mp3" download>
-								<img src="./images/icons8-download-32.png">
-							</a>
-						  </div>
-					  </div>
-				  </div>
-				</div>
-			  </div>
-			  <div class="panel panel-default">
-				<div class="panel-heading">
-				  <h4 class="panel-title">
-					<a data-toggle="collapse" data-parent="#accordion" href="#collapse3">2017</a>
-				  </h4>
-				</div>
-				<div id="collapse3" class="panel-collapse collapse">
-				  <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-				  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
-				</div>
-			  </div>
-			</div> 
-		  </div>
-
-		<!-- Footer -->
-		<footer id="footer">
-			<div class="inner">
-				<div class="content">
-					<section>
-						<h4>About Us</h4>
-						<p>RotaractMora has grown tremendously to a present member base of over 250 members. RotaractMora over the years has earned much recognition in the Rotaract movement,
+	<!-- Footer -->
+	<footer id="footer">
+		<div class="inner">
+			<div class="content">
+				<section>
+					<h4>About Us</h4>
+					<p>RotaractMora has grown tremendously to a present member base of over 250 members. RotaractMora
+						over the years has earned much recognition in the Rotaract movement,
 						bagging multiple local, as well as international awards, and doing projects with high quality,
 						sustainability and continuity.</p>
-					</section>
-					<section>
-						<h4>Reach Us</h4>
-						<ul class="alt">
-							<li>
-								<strong>Post</strong>
-								<br/>
-								Rotaract Club of University of Moratuwa,<br>
-								University of Moratuwa,<br>
-								Bandaranayake Mawatha,<br>
-								Moratuwa. <br> 10400
-							</li>
-							<!--<li><a href="#">Etiam vel lorem sed amet.</a></li>
+				</section>
+				<section>
+					<h4>Reach Us</h4>
+					<ul class="alt">
+						<li>
+							<strong>Post</strong>
+							<br />
+							Rotaract Club of University of Moratuwa,<br>
+							University of Moratuwa,<br>
+							Bandaranayake Mawatha,<br>
+							Moratuwa. <br> 10400
+						</li>
+						<!--<li><a href="#">Etiam vel lorem sed amet.</a></li>
 							<li><a href="#">Felis enim feugiat viverra.</a></li>
 							<li><a href="#">Dolor pulvinar magna etiam.</a></li>-->
-						</ul>
-					</section>
-					<section>
-						<h4>Follow Us</h4>
-						<ul class="plain">
-							<li><a href="https://twitter.com/RotaractMora"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
-							<li><a href="https://www.facebook.com/rotaractmora/"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
-							<li><a href="https://www.instagram.com/rotaractmora/"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
-							<li><a href="https://www.linkedin.com/company/rotaract-club-of-university-of-moratuwa/about/"><i class="icon fa-github">&nbsp;</i>LinkedIn</a></li>
-						</ul>
-					</section>
-				</div>
-				<div class="copyright">
-					<!--&copy; RotaractMora. Photos <a href="https://unsplash.co">Unsplash</a>, Video <a href="https://coverr.co">Coverr</a>.-->
-					&copy; RotaractMora 2020
-				</div>
+					</ul>
+				</section>
+				<section>
+					<h4>Follow Us</h4>
+					<ul class="plain">
+						<li><a href="https://twitter.com/RotaractMora"><i class="icon fa-twitter">&nbsp;</i>Twitter</a>
+						</li>
+						<li><a href="https://www.facebook.com/rotaractmora/"><i
+									class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
+						<li><a href="https://www.instagram.com/rotaractmora/"><i
+									class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
+						<li><a href="https://www.linkedin.com/company/rotaract-club-of-university-of-moratuwa/about/"><i
+									class="icon fa-github">&nbsp;</i>LinkedIn</a></li>
+					</ul>
+				</section>
 			</div>
-		</footer>
+			<div class="copyright">
+				<!--&copy; RotaractMora. Photos <a href="https://unsplash.co">Unsplash</a>, Video <a href="https://coverr.co">Coverr</a>.-->
+				&copy; RotaractMora 2020
+			</div>
+		</div>
+	</footer>
 
 	<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/browser.min.js"></script>
-		<script src="assets/js/breakpoints.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
