--- a/past_papers_agri.html
+++ b/past_papers_agri.html
@@ -62,7 +62,7 @@
 					</h4>
 				</div>
 
-				<div id="collapse1" class="panel-collapse collapse in">
+				<div id="collapse1" class="panel-collapse collapse">
 					<div class="panel-body">Question 1
 						<audio controls>
 							<source src="./assets/sound_test.mp3" type="audio/mp3">
@@ -100,7 +100,7 @@
 					</h4>
 				</div>
 
-				<div id="collapse2" class="panel-collapse collapse in">
+				<div id="collapse2" class="panel-collapse collapse">
 					<div class="panel-body">Question 1
 						<audio controls>
 							<source src="./assets/sound_test.mp3" type="audio/mp3">
@@ -145,7 +145,7 @@
 					</h4>
 				</div>
 
-				<div id="collapse3" class="panel-collapse collapse in">
+				<div id="collapse3" class="panel-collapse collapse">
 					<div class="panel-body">Question 1
 						<audio controls>
 							<source src="./assets/sound_test.mp3" type="audio/mp3">
