--- a/past_papers_agri.html
+++ b/past_papers_agri.html
@@ -175,7 +175,7 @@
 				<div id="collapse4" class="panel-collapse collapse">
 					<div class="panel-body">Questions 1 - 10
 						<audio controls>
-							<source src="http://docs.google.com/uc?export=open&id=1LvHap744GdL7WUVpRq7ppDg-U9uRC3T7" type="audio/mp3">
+							<source src="https://docs.google.com/uc?export=open&id=1LvHap744GdL7WUVpRq7ppDg-U9uRC3T7" type="audio/mp3">
 							Your browser does not support the audio element.
 						</audio>
 						
@@ -185,7 +185,7 @@
 					</div>
 					<div class="panel-body">Questions 11 - 20
 						<audio controls>
-							<source src="http://docs.google.com/uc?export=open&id=1lqxoci7s3Sz7iam6JfptVr66ERRyT-F3" type="audio/mp3">
+							<source src="https://docs.google.com/uc?export=open&id=1lqxoci7s3Sz7iam6JfptVr66ERRyT-F3" type="audio/mp3">
 							Your browser does not support the audio element.
 						</audio>
 						
