--- a/past_papers_agri.html
+++ b/past_papers_agri.html
@@ -175,21 +175,21 @@
 				<div id="collapse4" class="panel-collapse collapse">
 					<div class="panel-body">Questions 1 - 10
 						<audio controls>
-							<source src="https://docs.google.com/uc?export=open&id=1LvHap744GdL7WUVpRq7ppDg-U9uRC3T7" type="audio/mp3">
+							<source src="http://docs.google.com/uc?export=open&id=1LvHap744GdL7WUVpRq7ppDg-U9uRC3T7" type="audio/mp3">
 							Your browser does not support the audio element.
 						</audio>
 						
-						<a href="https://docs.google.com/uc?id=1LvHap744GdL7WUVpRq7ppDg-U9uRC3T7&export=download" download>
+						<a href="http://docs.google.com/uc?id=1LvHap744GdL7WUVpRq7ppDg-U9uRC3T7&export=download" download>
 							<img src="./images/icons8-download-32.png">
 						</a>
 					</div>
 					<div class="panel-body">Questions 11 - 20
 						<audio controls>
-							<source src="https://docs.google.com/uc?export=open&id=1lqxoci7s3Sz7iam6JfptVr66ERRyT-F3" type="audio/mp3">
+							<source src="http://docs.google.com/uc?export=open&id=1lqxoci7s3Sz7iam6JfptVr66ERRyT-F3" type="audio/mp3">
 							Your browser does not support the audio element.
 						</audio>
 						
-						<a href="https://docs.google.com/uc?id=1lqxoci7s3Sz7iam6JfptVr66ERRyT-F3&export=download" download>
+						<a href="http://docs.google.com/uc?id=1lqxoci7s3Sz7iam6JfptVr66ERRyT-F3&export=download" download>
 							<img src="./images/icons8-download-32.png">
 						</a>
 					</div>
