--- a/past_papers_agri.html
+++ b/past_papers_agri.html
@@ -172,13 +172,13 @@
 					</h4>
 				</div>
 				<div id="collapse4" class="panel-collapse collapse">
-					<div class="panel-body">Questions 21 - 30</br>
+					<div class="panel-body">Questions 01 - 10</br>
 						<audio controls>
 							<!--https://drive.google.com/open?id=1AhVePXlMDqfGov1okZSdgvGrx4JZpImQ-->							
-							<source src="https://docs.google.com/uc?export=download&id=1AhVePXlMDqfGov1okZSdgvGrx4JZpImQ" type="audio/mp3">
+							<source src="http://rotaractmora.org/rotaractmora_static/MH/voice%20of%20humanity%202019%20%20OL%20past%20papers/Agri/Agri%202016/1.2016%20agri%20mcq%201-10.mp3" type="audio/mp3">
 							Your browser does not support the audio element.
 						</audio>						
-						<a href="https://drive.google.com/uc?authuser=0&id=1AhVePXlMDqfGov1okZSdgvGrx4JZpImQ&export=download" download>
+						<a href="http://rotaractmora.org/rotaractmora_static/MH/voice%20of%20humanity%202019%20%20OL%20past%20papers/Agri/Agri%202016/1.2016%20agri%20mcq%201-10.mp3&export=download" download>
 							<img src="./images/icons8-download-32.png">
 						</a>
 					</div>				
