--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 								</blockquote>
 								<div class="author">
 									<div class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images\pic04.jpeg" alt="" />
 									</div>
 									<p class="credit">- <strong>Helen Keller</strong> <span>American author</span></p>
 								</div>
@@ -119,7 +119,7 @@
 								</blockquote>
 								<div class="author">
 									<div class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images\img05.jpg" alt="" />
 									</div>
 									<p class="credit">- <strong>Jorge Luis Borges</strong> <span>argentine writer</span></p>
 								</div>
@@ -132,7 +132,7 @@
 								</blockquote>
 								<div class="author">
 									<div class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images\pic06.jpg" alt="" />
 									</div>
 									<p class="credit">- <strong>Stephen Hawking</strong> <span>English theoretical physicist</span></p>
 								</div>
