--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 									<div class="image">
 										<img src="images\pic04.jpeg" alt="" />
 									</div>
-									<p class="credit">- <strong>Helen Keller</strong> <span><br>American author</span></p>
+									<p class="credit">- <strong>Helen Keller</strong><br> <span>American author</span></p>
 								</div>
 							</div>
 						</section>
@@ -121,7 +121,7 @@
 									<div class="image">
 										<img src="images\img05.jpg" alt="" />
 									</div>
-									<p class="credit">- <strong>Jorge Luis Borges</strong> <span><br>argentine writer</span></p>
+									<p class="credit">- <strong>Jorge Luis Borges</strong><br> <span>Argentine writer</span></p>
 								</div>
 							</div>
 						</section>
@@ -134,7 +134,7 @@
 									<div class="image">
 										<img src="images\pic06.jpg" alt="" />
 									</div>
-									<p class="credit">- <strong>Stephen Hawking</strong> <span><br>English theoretical physicist</span></p>
+									<p class="credit">- <strong>Stephen Hawking</strong><br> <span>English theoretical physicist</span></p>
 								</div>
 							</div>
 						</section>
