--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 								</blockquote>
 								<div class="author">
 									<div class="image">
-										<img src="images\img05.jpg" alt="" />
+										<img src="images\pic05 .jpg" alt="" />
 									</div>
 									<p class="credit">- <strong>Jorge Luis Borges</strong><br> <span>Argentine writer</span></p>
 								</div>
