--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<div class="highlights">
 						<!--Selectable categories-->
 						<section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
+							<div class="content" style="cursor: pointer;" onclick="window.location='magazines.html';">
 								<header>
 									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
 									<h3>Magazines</h3>
