--- a/past_papers.html
+++ b/past_papers.html
@@ -64,6 +64,55 @@
 								</header>
 							</div>
 						</section>
+						<section>
+							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
+								<header>
+									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
+									<h3>Buddhism</h3>
+								</header>
+							</div>
+						</section>
+						<section>
+							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
+								<header>
+									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
+									<h3>Civics</h3>
+								</header>
+							</div>
+						</section>
+						<section>
+							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
+								<header>
+									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
+									<h3>Christianity</h3>
+								</header>
+							</div>
+						</section>
+						<section>
+							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
+								<header>
+									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
+									<h3>Home Science</h3>
+								</header>
+							</div>
+						</section>
+						<section>
+							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
+								<header>
+									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
+									<h3>Science</h3>
+								</header>
+							</div>
+						</section>
+						<section>
+							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
+								<header>
+									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
+									<h3>Sinhala</h3>
+								</header>
+							</div>
+						</section>
+
 					</div>
 				</div>
             </section>
