--- a/past_papers.html
+++ b/past_papers.html
@@ -49,7 +49,7 @@
 							</div>
 						</section>
 						<section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers.html'">
+							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_english.html'">
 								<header>
 									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
 									<h3>English</h3>
