--- a/past_papers_agri.html
+++ b/past_papers_agri.html
@@ -63,11 +63,12 @@
 						<audio controls>
 							<source src="http://rotaractmora.org/rotaractmora_static/MH/voice%20of%20humanity%202019%20%20OL%20past%20papers/Agri/Agri%202016/1.2016%20agri%20mcq%201-10.mp3" type="audio/mp3">
 							Your browser does not support the audio element.
-						</audio>						
-						<a href="http://rotaractmora.org/rotaractmora_static/MH/voice%20of%20humanity%202019%20%20OL%20past%20papers/Agri/Agri%202016/1.2016%20agri%20mcq%201-10.mp3&export=download" download>
+						</audio>
+						<a href="http://rotaractmora.org/rotaractmora_static/MH/voice%20of%20humanity%202019%20%20OL%20past%20papers/Agri/Agri%202016/1.2016%20agri%20mcq%201-10.mp3&export=download"
+							download>
 							<img src="./images/icons8-download-32.png">
 						</a>
-					</div>				
+					</div>
 
 				</div>
 
