--- a/past_papers.html
+++ b/past_papers.html
@@ -57,7 +57,7 @@
 							</div>
 						</section>
 						<section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
+							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_history.html';">
 								<header>
 									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
 									<h3>History</h3>
@@ -65,7 +65,7 @@
 							</div>
 						</section>
 						<section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
+							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_buddhism.html';">
 								<header>
 									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
 									<h3>Buddhism</h3>
@@ -73,7 +73,7 @@
 							</div>
 						</section>
 						<section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
+							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_civics.html';">
 								<header>
 									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
 									<h3>Civics</h3>
