--- a/past_papers.html
+++ b/past_papers.html
@@ -41,7 +41,7 @@
 					<div class="highlights">
 						<!--Selectable categories-->
 						<section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='./past_papers_agri.php'">
+							<div class="content" style="cursor: pointer;" onclick="window.location='./past_papers_agri.html'">
 								<header>
 									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
 									<h3>Agriculture</h3>
