--- a/past_papers_agri.html
+++ b/past_papers_agri.html
@@ -62,7 +62,7 @@
 					<div class="panel-body">1.2016_agri_mcq_1-10.mp3</br>
 						<audio controls>
 							<source
-								src="https://rotaractmora.org/rotaractmora_static/MH/voice_of_humanity_2019_OL_past_papers/Agri/Agri_2016/1.2016_agri_mcq_1-10.mp3"
+								src="http://rotaractmora.org/rotaractmora_static/MH/voice_of_humanity_2019_OL_past_papers/Agri/Agri_2016/1.2016_agri_mcq_1-10.mp3"
 								type="audio/mp3">
 							Your browser does not support the audio element.
 						</audio>
