--- a/past_papers.html
+++ b/past_papers.html
@@ -41,7 +41,7 @@
 					<div class="highlights">
 						<!--Selectable categories-->
 						<section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='./past_papers_agri.php'">
+							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_agri.html'">
 								<header>
 									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
 									<h3>Agriculture</h3>
@@ -81,7 +81,7 @@
 							</div>
 						</section>
 						<section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
+							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_christianity.html';">
 								<header>
 									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
 									<h3>Christianity</h3>
@@ -89,7 +89,7 @@
 							</div>
 						</section>
 						<section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
+							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_homescience.html';">
 								<header>
 									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
 									<h3>Home Science</h3>
@@ -97,7 +97,7 @@
 							</div>
 						</section>
 						<section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
+							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_science.html';">
 								<header>
 									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
 									<h3>Science</h3>
@@ -105,7 +105,7 @@
 							</div>
 						</section>
 						<section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
+							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers_sinhala.html';">
 								<header>
 									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
 									<h3>Sinhala</h3>
