--- a/magazines.html
+++ b/magazines.html
@@ -44,7 +44,7 @@
 							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com'">
 								<header>
 									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
-									<h3>Space</h3>
+									<h3>අභ්‍යවකාශය</h3>
 								</header>
 							</div>
 						</section>
@@ -52,7 +52,7 @@
 							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers.html'">
 								<header>
 									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
-									<h3>History</h3>
+									<h3>ඉතිහාසය</h3>
 								</header>
 							</div>
 						</section>
@@ -60,7 +60,7 @@
 							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
 								<header>
 									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
-									<h3>Art and religion</h3>
+									<h3>කලාව හා ආගම</h3>
 								</header>
 							</div>
                         </section>
@@ -68,7 +68,7 @@
 							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
 								<header>
 									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
-									<h3>Folk Stories</h3>
+									<h3>ජන කතා</h3>
 								</header>
 							</div>
                         </section>
@@ -76,7 +76,7 @@
 							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
 								<header>
 									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
-									<h3>science</h3>
+									<h3>විද්‍යාව</h3>
 								</header>
 							</div>
                         </section>
@@ -84,7 +84,7 @@
 							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
 								<header>
 									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
-									<h3>Other</h3>
+									<h3>විවිධ</h3>
 								</header>
 							</div>
 						</section>
