--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a class="logo" href="index.html">Manusath Handa</a>
+				<div class="upcon">
+					<img src="./images/logosrota/New folder (4)/Colour logo.png" style="width:8%" />Manusath Handa
+				</div>		
+				
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
