--- a/magazines.html
+++ b/magazines.html
@@ -41,7 +41,7 @@
 					<div class="highlights">
 						<!--Selectable categories-->
 						<section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com'">
+							<div class="content" style="cursor: pointer;" onclick="window.location='magazines_අභ්‍යවකාශය.html'">
 								<header>
 									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
 									<h3>අභ්‍යවකාශය</h3>
@@ -49,7 +49,7 @@
 							</div>
 						</section>
 						<section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='past_papers.html'">
+							<div class="content" style="cursor: pointer;" onclick="window.location='magazines_ඉතිහාසය.html'">
 								<header>
 									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
 									<h3>ඉතිහාසය</h3>
@@ -57,7 +57,7 @@
 							</div>
 						</section>
 						<section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
+							<div class="content" style="cursor: pointer;" onclick="window.location='magazines_කලාව_හා_ආගම.html';">
 								<header>
 									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
 									<h3>කලාව හා ආගම</h3>
@@ -73,7 +73,7 @@
 							</div>
                         </section>
                         <section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
+							<div class="content" style="cursor: pointer;" onclick="window.location='magazines_විද්‍යාව.html';">
 								<header>
 									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
 									<h3>විද්‍යාව</h3>
@@ -81,7 +81,7 @@
 							</div>
                         </section>
                         <section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
+							<div class="content" style="cursor: pointer;" onclick="window.location='magazines_විවිධ.html';">
 								<header>
 									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
 									<h3>විවිධ</h3>
