--- a/index.html
+++ b/index.html
@@ -6,21 +6,23 @@
 -->
 <html>
 	<head>
-		<title>RotaractMora Manusath Handa</title>
+		<title>RotaractMora Manusath Handa
+			<img src="./images/logosrota/New folder (4)/white logo.png"/>
+		</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
-				<div class="upcon">
-					<img src="./images/logosrota/New folder (4)/Colour logo.png" style="width:8%" />Manusath Handa
-				</div>		
-				
+				<a class="logo">
+					<img src="./images/logosrota/New folder (4)/Colour logo.png" width="9%"/>
+				</a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
