--- a/magazines.html
+++ b/magazines.html
@@ -65,7 +65,7 @@
 							</div>
                         </section>
                         <section>
-							<div class="content" style="cursor: pointer;" onclick="window.location='http://google.com';">
+							<div class="content" style="cursor: pointer;" onclick="window.location='magazines_ජන_කතා.html';">
 								<header>
 									<a class="icon fa-qrcode"><span class="label">Icon</span></a>
 									<h3>ජන කතා</h3>
